--- a/JAE_Review.bib
+++ b/JAE_Review.bib
@@ -222,6 +222,24 @@
   keywords = {diet,ecosystem,krill,Notothenioidei,predators}
 }
 
+@article{Barrera-Oro2019,
+  title = {The Importance of Macroalgae and Associated Amphipods in the Selective Benthic Feeding of Sister Rockcod Species {{Notothenia}} Rossii and {{N}}. Coriiceps ({{Nototheniidae}}) in {{West Antarctica}}},
+  author = {{Barrera-Oro}, Esteban and Moreira, Eugenia and Seefeldt, Meike Anna and Valli Francione, Mariano and Quartino, Mar{\'i}a Liliana},
+  year = {2019},
+  month = feb,
+  journal = {Polar Biology},
+  volume = {42},
+  number = {2},
+  pages = {317--334},
+  issn = {1432-2056},
+  doi = {10.1007/s00300-018-2424-0},
+  urldate = {2022-12-13},
+  abstract = {Studies on feeding selectivity in Antarctic fish with comparison between diet organisms and those available in the wild are scarce. We explored this issue in Notothenia rossii (NOR) and N. coriiceps (NOC) at Potter Cove in summer 2016 to test: (1) their preference among different benthic groups, primarily species of algae and amphipods and (2) differences between these nototheniids given their distinct morphology but their known similar general ecology in the fjords. The methodology included a comparative analysis of benthic organisms identified in the stomachs and those collected on macroalgal beds (Ivlev Index). Benthic amphipods, mainly Gondogeneia antarctica and Cheirimedon femoratus, followed by macroalgae, mainly Palmaria decipiens and Desmarestia spp., were the most important and frequent dietary items (IRI\%) for both nototheniids. However, NOC was more herbivorous and fed more intensively on a wider diversity of benthic organisms such as certain algal-associated groups like gastropods and bivalves, whereas NOR fed on a greater proportion of epibenthic amphipods and other epibenthic prey. Although in the last three decades the physiognomy of the inner cove has been changed due to the~retreat of the Fourcade Glacier, at our sampling site in the outer cove the abundance and vertical distribution of macroalgae did not show substantial changes compared with those reported in the literature in 1994\textendash 1996. Temporal differences in the feeding selectivity of NOC on amphipod species, between contemporary and historical samples, may be explained by variations in the assemblage of the algal-associated epifauna. We suggest factors that may have produced these changes.},
+  langid = {english},
+  keywords = {Antarctic fish,Diet,Marine ecology,Potter Cove,South Shetland Islands},
+  file = {/Users/tomasmarina/Zotero/storage/K7AR89YJ/Barrera-Oro et al. - 2019 - The importance of macroalgae and associated amphip.pdf}
+}
+
 @article{Bartley2019,
   title = {Food Web Rewiring in a Changing World},
   author = {Bartley, Timothy J. and McCann, Kevin S. and Bieg, Carling and Cazelles, Kevin and Granados, Monica and Guzzo, Matthew M. and MacDougall, Andrew S. and Tunney, Tyler D. and McMeans, Bailey C.},
@@ -823,6 +841,24 @@
   keywords = {Glacier runoff,Light requirements,Metabolic carbon balance,Photosynthesis,Photosynthetic acclimation,Turbidity}
 }
 
+@article{Diez2012,
+  title = {Pelagic Swarms and Beach Strandings of the Squat Lobster {{Munida}} Gregaria ({{Anomura}}: {{Munididae}}) in the {{Beagle Channel}}, {{Tierra}} Del {{Fuego}}},
+  shorttitle = {Pelagic Swarms and Beach Strandings of the Squat Lobster {{Munida}} Gregaria ({{Anomura}}},
+  author = {Diez, Mariano J. and {P{\'e}rez-Barros}, Patricia and Carolina Romero, M. and Scioscia, Gabriela and Tapella, Federico and Cabreira, Ariel G. and Madirolas, Adri{\'a}n and Raya Rey, Andrea and Lovrich, Gustavo A.},
+  year = {2012},
+  month = jul,
+  journal = {Polar Biology},
+  volume = {35},
+  number = {7},
+  pages = {973--983},
+  issn = {1432-2056},
+  doi = {10.1007/s00300-011-1144-5},
+  urldate = {2023-05-10},
+  abstract = {The present article is the first formal record of pelagic swarms and beach strandings of the squat lobster Munida gregaria in the Beagle Channel, southern South America. To describe size composition and natural diet of beach strandings and swarms, samples from strandings were taken in April 2007, March 2008 and March 2010. Samples from swarms were taken in May 2007 and April 2010. Also, during November 2008 and January 2009, two acoustic surveys were carried out to describe both, horizontal distribution and school metrics of swarms. Pelagic swarms and beach strandings were composed of 100\% individuals of the morph gregaria of M. gregaria. Mean size of males and females in both, beach strandings and swarms, were similar. The diet of pelagic M. gregaria was composed mainly of crustaceans, unicellular algae and small macroalgae, sediment and particulate organic matter. Swarms of pelagic Munida took the shape of extended layers of varying density and height. Their positions in the water column were also variable: swarms were found at different depths, from the subsurface layer to near the sea bottom. Occasionally, some large swarms occupied most of the water column. In the Beagle Channel, SW winds during spring tides could be a forcing factor for M. gregaria strandings. The absence of shoaling animals in the Beagle Channel between 1997 and 2002 and the recent occurrence of swarms are coincident with their appearance in other locations in Patagonia. In consequence, we hypothesize that the factor influencing the formation of swarms must be acting at a regional scale.},
+  langid = {english},
+  keywords = {Distribution,Hydroacoustic,Krill,Shoals,Sub-Antarctic}
+}
+
 @article{DiMauro2022,
   title = {Anthropogenic Microfibers Are Highly Abundant at the {{Burdwood Bank}} Seamount, a Protected Sub-{{Antarctic}} Environment in the {{Southwestern Atlantic Ocean}}},
   author = {Di Mauro, Rosana and Castillo, Santiago and P{\'e}rez, Anal{\'i}a and Iachetti, Clara M. and Silva, Leonel and Tomba, Juan P. and Chiesa, Ignacio L.},
@@ -1003,6 +1039,16 @@
   langid = {english},
   keywords = {Climate-change ecology,Climate-change impacts,Environmental impact},
   file = {/Users/tomasmarina/Zotero/storage/X3R5KTNM/Fretwell et al. - 2023 - Record low 2022 Antarctic sea ice led to catastrop.pdf}
+}
+
+@techreport{Fuentes2008,
+  title = {Mesozooplankton of {{Potter Cove}}: {{Community}} Composition and Seasonal Distribution in 2002 and 2003},
+  author = {Fuentes, Ver{\'o}nica L. and {Schnack-Schiel}, S. B. and Schloss, I. R. and Esnal, Graciela G.},
+  year = {2008},
+  pages = {75--84},
+  address = {{Germany}},
+  institution = {{Alfred-Wegener-Institut f\"ur Polar- und Meeresforschung}},
+  file = {/Users/tomasmarina/Zotero/storage/8N8WENAC/MASSIVE_INPUT_OF_TERRIGENOUS_SEDIMENT_IN20170218-24736-9mjvhm-libre.pdf}
 }
 
 @article{Funes2022,
@@ -1825,6 +1871,25 @@
   keywords = {Beagle Channel,Carbonate system,Fast repetition rate fluorometry,Microbial community respiration,Phytoplankton production}
 }
 
+@article{Lau2018,
+  title = {The Reproductive Ecology of the {{Antarctic}} Bivalve {{Aequiyoldia}} Eightsii ({{Protobranchia}}: {{Sareptidae}}) Follows Neither {{Antarctic}} nor Taxonomic Patterns},
+  shorttitle = {The Reproductive Ecology of the {{Antarctic}} Bivalve {{Aequiyoldia}} Eightsii ({{Protobranchia}}},
+  author = {Lau, Sally C. Y. and Grange, Laura J. and Peck, Lloyd S. and Reed, Adam J.},
+  year = {2018},
+  month = sep,
+  journal = {Polar Biology},
+  volume = {41},
+  number = {9},
+  pages = {1693--1706},
+  issn = {1432-2056},
+  doi = {10.1007/s00300-018-2309-2},
+  urldate = {2023-09-20},
+  abstract = {The accepted paradigm for reproduction in Antarctic marine species is one where oogenesis takes 18~months to 2~years, and a bimodal egg-size distribution where two cohorts of eggs are present in female gonads throughout the year. These slow gametogenic traits are driven by low temperature and/or the restriction of resource availability because of extreme seasonality in the marine environment. Here we present data on the reproductive ecology of the common Antarctic bivalve Aequiyoldia eightsii (Jay, 1839) (Protobranchia: Sarepidae) from monthly samples collected between January 2013 and May 2014 at Hangar Cove, Rothera Point on the West Antarctic Peninsula. These data show that A. eightsii is unusual because it does not follow the typical pattern expected for reproduction in Antarctic marine invertebrates, and differs also from closely related nuculanid protobranch bivalves with respect to gametogenic duration and reproductive periodicity. Continuous oogenesis, evidenced by the year-round occurrence of previtellogenic, vitellogenic, and ripe oocytes in female gonads, is supplemented by a seasonal increase in reproductive intensity and spawning in Austral winter (April\textendash May), evidenced by the loss of mature spermatozoa and ripe oocytes from males and females, respectively. The simultaneous occurrence of these contrasting traits in individuals is attributed to a flexible feeding strategy (suspension and deposit feeding) in response to seasonal changes in food supply characteristic of the Antarctic marine environment. Asynchrony between individual females is also notable. We hypothesise that the variability may represent a trade-off between somatic and reproductive growth, and previously reported internal interannual cycles in shell growth.},
+  langid = {english},
+  keywords = {Antarctic,Bivalve,Interannual,Invertebrate,Marine,Reproduction},
+  file = {/Users/tomasmarina/Zotero/storage/89XL9TMB/Lau et al. - 2018 - The reproductive ecology of the Antarctic bivalve .pdf}
+}
+
 @article{Leihy2023,
   title = {Introduced and Invasive Alien Species of {{Antarctica}} and the {{Southern Ocean Islands}}},
   author = {Leihy, Rachel I. and Peake, Lou and Clarke, David A. and Chown, Steven L. and McGeoch, Melodie A.},
@@ -1881,6 +1946,26 @@
   langid = {english},
   keywords = {Carbon cycle,Marine biology,Water microbiology},
   file = {/Users/tomasmarina/Zotero/storage/S8JIAMVI/Lin et al. - 2021 - Decline in plankton diversity and carbon flux with.pdf}
+}
+
+@article{Loeb1997,
+  title = {Effects of Sea-Ice Extent and Krill or Salp Dominance on the {{Antarctic}} Food Web},
+  author = {Loeb, V. and Siegel, V. and {Holm-Hansen}, O. and Hewitt, R. and Fraser, W. and Trivelpiece, W. and Trivelpiece, S.},
+  year = {1997},
+  month = jun,
+  journal = {Nature},
+  volume = {387},
+  number = {6636},
+  pages = {897--900},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/43174},
+  urldate = {2023-09-20},
+  abstract = {Krill (Euphausia superba) provide a direct link between primary producers and higher trophic levels in the Antarctic marine food web1,2,3,4,5,6. The pelagic tunicate Salpa thompsoni can also be important during spring and summer through the formation of extensive and dense blooms6,7,8,9. Although salps are not a major dietary item for Antarctic vertebrate predators7,10, their blooms can affect adult krill reproduction and survival of krill larvae. Here we provide data from 1995 and 1996 that support hypothesized relationships between krill, salps and region-wide sea-ice conditions11,12. We have assessed salp consumption as a proportion of net primary production, and found correlations between herbivore densities and integrated chlorophyll-a that indicate that there is a degree of competition between krill and salps. Our analysis of the relationship between annual sea-ice cover and a longer time series of air temperature measurements12,13 indicates a decreased frequency of winters with extensive sea-ice development over the last five decades. Our data suggest that decreased krill availability may affect the levels of their vertebrate predators. Regional warming and reduced krill abundance therefore affect the marine food web and krill resource management.},
+  copyright = {1997 Macmillan Magazines Ltd.},
+  langid = {english},
+  keywords = {Humanities and Social Sciences,multidisciplinary,Science},
+  file = {/Users/tomasmarina/Zotero/storage/VMCYYR9H/Loeb et al. - 1997 - Effects of sea-ice extent and krill or salp domina.pdf}
 }
 
 @article{Lopez-Lopez2022,
@@ -2429,6 +2514,22 @@
   file = {/Users/tomasmarina/Zotero/storage/Z2JLC2D7/O’Gorman et al. - 2019 - A simple model predicts how warming simplifies wil.pdf}
 }
 
+@article{Ojeda2021,
+  title = {Microplastics Pollution in the Intertidal Limpet, {{Nacella}} Magellanica, from {{Beagle Channel}} ({{Argentina}})},
+  author = {Ojeda, Mariel and Cossi, Paula F. and Rimondino, Guido N. and Chiesa, Ignacio L. and Boy, Claudia C. and P{\'e}rez, Anal{\'i}a F.},
+  year = {2021},
+  month = nov,
+  journal = {Science of The Total Environment},
+  volume = {795},
+  pages = {148866},
+  issn = {0048-9697},
+  doi = {10.1016/j.scitotenv.2021.148866},
+  urldate = {2023-09-20},
+  abstract = {Microplastics (MPs) have been identified in diverse marine invertebrates; however, there are few studies on limpets. This study aimed to evaluate and compare the presence of MPs in Nacella magellanica among sites of the Beagle Channel with different degree of anthropogenic influence. Intertidal limpets were sampled in three sites: Ushuaia Bay (UB) (inside Ushuaia city), a site with high anthropogenic influence owing to population growth, and fisheries, industrial and port activities; Ensenada Zaratiegui (EZ) and Playa Larga (PL) (west and east of Ushuaia city, respectively), both sites with a certain degree of environmental protection and low anthropogenic influence. MPs were isolated from the whole soft tissue of individuals by oxidative digestions with H2O2 (30\%; 1:10 w/v). MPs occurrence was 100\% in organisms from UB and EZ, whereas 90\% in PL. Limpets from UB showed 10 {$\pm$} 6.69 MPs/ind and 2.22 {$\pm$} 0.78 MPs/g ww, while in PL and EZ there were 2.90 {$\pm$} 2.02 MPs/ind and 0.96 {$\pm$} 0.94 MPs/g ww; and 5.60 {$\pm$} 2.59 MPs/ind and 2.41 {$\pm$} 1.47 MPs/g ww, respectively. Fibres were the most abundant MPs type, followed by fragments and films. Fibres and films were identified as semi-synthetic cellulose and, although the polymer matrix of fragments was masked by copper phthalocyanine, one of them could be identified as polystyrene. As expected, the highest abundance of MPs was found in UB. However, a lower abundance of particles was detected in PL (downstream of UB) than in EZ (upstream of UB). This could be due to the influence of both the main current of the Beagle Channel and fluvial discharges, reducing the buoyancy of MPs. More studies are needed to understand the contribution of regional and local features to the accumulation of MPs in these environments and their interaction with the biota.},
+  keywords = {Contaminants of emerging concern,Gastropod,Plastic debris,South America},
+  file = {/Users/tomasmarina/Zotero/storage/4PQ6UQRE/S0048969721039383.html}
+}
+
 @article{Oliver2018,
   title = {Longer and More Frequent Marine Heatwaves over the Past Century},
   author = {Oliver, Eric C. J. and Donat, Markus G. and Burrows, Michael T. and Moore, Pippa J. and Smale, Dan A. and Alexander, Lisa V. and Benthuysen, Jessica A. and Feng, Ming and Sen Gupta, Alex and Hobday, Alistair J. and Holbrook, Neil J. and {Perkins-Kirkpatrick}, Sarah E. and Scannell, Hillary A. and Straub, Sandra C. and Wernberg, Thomas},
@@ -2641,6 +2742,22 @@
   file = {/Users/tomasmarina/Zotero/storage/X3IRPCN8/Pecuchet et al. - 2022 - Spatio-temporal turnover and drivers of bentho-dem.pdf}
 }
 
+@article{Perez2020,
+  title = {First Report of Microplastics Presence in the Mussel {{Mytilus}} Chilensis from {{Ushuaia Bay}} ({{Beagle Channel}}, {{Tierra}} Del {{Fuego}}, {{Argentina}})},
+  author = {P{\'e}rez, Anal{\'i}a F. and Ojeda, Mariel and Rimondino, Guido N. and Chiesa, Ignacio L. and Di Mauro, Rosana and Boy, Claudia C. and Calcagno, Javier A.},
+  year = {2020},
+  month = dec,
+  journal = {Marine Pollution Bulletin},
+  volume = {161},
+  pages = {111753},
+  issn = {0025-326X},
+  doi = {10.1016/j.marpolbul.2020.111753},
+  urldate = {2023-09-20},
+  abstract = {Microplastics contamination is reported for the first time on Mytilus chilensis from Ushuaia Bay, one of the most remote areas of South America. Our results demonstrate the occurrence of microplastics in all samples, with an average of 8.6\,{$\pm$}\,3.53 items per individual. Fibers and fragments were the most abundant, with a percentage of 77.91 and 17.44\%, respectively. The average length of the fibers was 742.3\,{$\pm$}\,702.1\,{$\mu$}m, while the average cross-sectional area of fragments was 1944.80\,{$\pm$}\,960.94\,{$\mu$}m2. The polymers identified were polyamides, semi-synthetic cellulosic materials, and PVC copolymers. The number of microplastics per individual was greater than those reported in even more populated regions. Probably, the modifications included in the technique led to optimize the extraction of MPs, reflecting the detection of a greater number of particles. M. chilensis could play a role in an extensive evaluation of MPs in the Ushuaia Bay, providing information on the interaction of MPs and biota.},
+  keywords = {Marine pollution,Microplastics,Spectroscopic analyses},
+  file = {/Users/tomasmarina/Zotero/storage/TNN59DT5/S0025326X20308717.html}
+}
+
 @inproceedings{Perez2021,
   title = {{Micropl\'asticos en organismos marinos de altas latitudes}},
   booktitle = {{I Jornadas de la Red Cient\'ifica Argentina para el estudio de los pl\'asticos y sus impactos en el ambiente (SEPIA)}},
@@ -2818,6 +2935,25 @@
   langid = {english},
   keywords = {Climate-change ecology},
   file = {/Users/tomasmarina/Zotero/storage/2IGXL7V9/Poloczanska et al. - 2013 - Global imprint of climate change on marine life.pdf}
+}
+
+@article{Quartino2008,
+  title = {Summer Macroalgal Biomass in {{Potter Cove}}, {{South Shetland Islands}}, {{Antarctica}}: Its Production and Flux to the Ecosystem},
+  shorttitle = {Summer Macroalgal Biomass in {{Potter Cove}}, {{South Shetland Islands}}, {{Antarctica}}},
+  author = {Quartino, M. L. and {Boraso de Zaixso}, A. L.},
+  year = {2008},
+  month = feb,
+  journal = {Polar Biology},
+  volume = {31},
+  number = {3},
+  pages = {281--294},
+  issn = {1432-2056},
+  doi = {10.1007/s00300-007-0356-1},
+  urldate = {2023-09-20},
+  abstract = {Summer macroalgal biomass and production were analyzed at Potter Cove, King George Island, Antarctica and the potential carbon transfer of macroalgal production to the coastal ecosystem of the cove was estimated. A total of 38 algal species were found, with Desmarestia anceps, D. menziesii and Himantothallus grandifolius accounting for almost 80\% of the biomass. Biomass data and published growth rates were combined to calculate the production of the five most abundant species. The standing stock for each summer month was estimated as the product of the average biomass and the area of the macroalgal stands. The monthly biomass production was calculated for each species by difference between the expected biomass and the observed biomass at the previous month. The macroalgal production showed a decreasing trend during the summer months. The average standing stock in the whole cove was 792.84~MT and the production was 1,401.33~MT during the summer 1994\textendash 1995. The flux of biomass to the ecosystem during the summer period was 1,370.61~MT, which is almost as much as the total summer production. The study demonstrates that macroalgae are one of the main energy sources in Potter Cove, and probably support a large fraction of the secondary production of the benthos.},
+  langid = {english},
+  keywords = {Antarctica,Biomass,Flux,Macroalgae,Production},
+  file = {/Users/tomasmarina/Zotero/storage/6MKVKH43/Quartino and Boraso de Zaixso - 2008 - Summer macroalgal biomass in Potter Cove, South Sh.pdf}
 }
 
 @article{Quartino2013,
@@ -3503,6 +3639,24 @@
   urldate = {2023-09-02},
   abstract = {Ecological networks have a long history in ecology, and a recent increase in network analyses across environmental gradients has revealed important changes in their structure, dynamics, and functioning. These changes can be broadly grouped according to three nonexclusive mechanisms: (a) changes in the species composition of the networks (driven by interaction patterns of invaders, nonrandom extinction of species according to their traits, or differences among species in population responses across gradients); (b) changes that alter interaction frequencies via changes in search efficiency (driven by altered habitat structure or metabolic rates) or changes in spatial and temporal overlap; and (c) changes to coevolutionary processes and patterns. Taking spatial and temporal processes into account can further elucidate network variation and improve predictions of network responses to environmental change. Emerging evidence links network structure to ecosystem functioning; however, scaling up to metanetworks or multilayer networks may modify interpretations of network structure, stability, and functioning.},
   langid = {english}
+}
+
+@article{Vanella2007,
+  title = {Changes in the Fish Fauna Associated with a Sub-{{Antarctic Macrocystis}} Pyrifera Kelp Forest in Response to Canopy Removal},
+  author = {Vanella, Fabi{\'a}n A. and Fern{\'a}ndez, Daniel A. and Carolina Romero, M. and Calvo, Jorge},
+  year = {2007},
+  month = mar,
+  journal = {Polar Biology},
+  volume = {30},
+  number = {4},
+  pages = {449--457},
+  issn = {1432-2056},
+  doi = {10.1007/s00300-006-0202-x},
+  urldate = {2022-12-19},
+  abstract = {The fish fauna associated with a Macrocystis pyrifera forest and the effects of the canopy removal on this fauna were studied in the Beagle Channel, Tierra del Fuego. Seasonal changes and differences in the fish communities that inhabit the canopy and the holdfast were also studied. Two patches of kelp forest separated by 200~m were selected. In one, the canopy was removed periodically while the other was used as a control. Samples were collected seasonally, from autumn 1999 to 2001. Fish fauna in the water column was sampled using trammel nets and holdfast fish fauna was sampled by removing the complete holdfast. Different assemblages of fish species were captured in the water column (surface and bottom) and in the holdfast. In the former there were mainly pelagic and benthopelagic species and the latter predominantly demersal species. The principal effect of the canopy removal was a drop in the abundance (and total weight) of Paranotothenia magellanica (doradito), the species with the strongest relationship with the canopy, principally at the surface of the treated patch probably due to a reduction in the availability of refuges. A high degree of seasonality was observed for fish species' total weight, abundance and diversity, with higher values in summer and autumn. Taking into account our data and available data on kelp growth in the same locality, we suggest of cutting the kelp forest (preferably those farther away from the coast) once a year in winter or early spring, in order to minimize impact on the fish community.},
+  langid = {english},
+  keywords = {Canopy removal,Kelp forest,Macrocystis pyrifera,Notothenioids,Sub-Antarctic fish},
+  file = {/Users/tomasmarina/Zotero/storage/5MTVYJJB/Vanella et al. - 2007 - Changes in the fish fauna associated with a sub-An.pdf}
 }
 
 @article{Verges2014,
