--- a/JAE_Review.bib
+++ b/JAE_Review.bib
@@ -36,6 +36,22 @@
   file = {/Users/tomasmarina/Zotero/storage/PEKB4XVX/Ainley et al. - 2007 - Paradigm lost, or is top-down forcing no longer si.pdf}
 }
 
+@article{Albert2002,
+  title = {Statistical Mechanics of Complex Networks},
+  author = {Albert, R{\'e}ka and Barab{\'a}si, Albert-L{\'a}szl{\'o}},
+  year = {2002},
+  month = jan,
+  journal = {Reviews of Modern Physics},
+  volume = {74},
+  number = {1},
+  pages = {47--97},
+  publisher = {{American Physical Society}},
+  doi = {10.1103/RevModPhys.74.47},
+  urldate = {2023-09-21},
+  abstract = {Complex networks describe a wide range of systems in nature and society. Frequently cited examples include the cell, a network of chemicals linked by chemical reactions, and the Internet, a network of routers and computers connected by physical links. While traditionally these systems have been modeled as random graphs, it is increasingly recognized that the topology and evolution of real networks are governed by robust organizing principles. This article reviews the recent advances in the field of complex networks, focusing on the statistical mechanics of network topology and dynamics. After reviewing the empirical data that motivated the recent interest in networks, the authors discuss the main models and analytical tools, covering random graphs, small-world and scale-free networks, the emerging theory of evolving networks, and the interplay between topology and the network's robustness against failures and attacks.},
+  file = {/Users/tomasmarina/Zotero/storage/R4ITF42D/RevModPhys.74.html}
+}
+
 @book{Allega2019,
   title = {{Estado del conocimiento biol\'ogico pesquero de los principales recursos vivos y su ambiente, con relaci\'on a la exploraci\'on hidrocarbur\'ifera en la Zona Econ\'omica Exclusiva Argentina y adyacencias}},
   author = {Allega, Lucrecia and Braverman, Mara Silvia and Cabreira, Ariel Gustavo and Campod{\'o}nico, Silvana and Colonello, Jorge Horacio and Derisio, Carla Mar{\'i}a and Di Mauro, Rosana Patricia and Gait{\'a}n, Esteban Nicol{\'a}s and Hozbor, Maria and Irusta, Gabriela and Lutz, Vivian Alicia and Mar{\'i}, Noem{\'i} and Militelli, Maria Ines and Moriondo, Paula and Navarro, Gabriela and Orlando, Paula and Pajaro, Marcelo and Prandoni Garc{\'i}a, Nicol{\'a}s Iv{\'a}n and Prosdocimi, Laura and Reta, Raul and Rico, Rita and Riestra, Cecilia Micaela and Segura, Valeria and Schejter, Laura and Schiariti, Agustin and Souto, Valeria and Ver{\'o}n, Eleonora Marta},
@@ -519,6 +535,25 @@
   abstract = {ABSTRACTThe Deepwater Horizon (DWH) oil spill was the largest accidental release of crude oil into the sea in history, and represents the most extensive use of chemical dispersants to treat an oil spill. Following the spill, extensive studies were conducted to determine the potential acute and sublethal toxic effects of crude oil and dispersants on a range of planktonic, nektonic, and benthic marine organisms. Organisms such as phytoplankton, zooplankton, and fish were examined via controlled laboratory studies, while others, such as deep-sea benthic invertebrates, which are difficult to sample, maintain, and study in the laboratory, were assessed through field studies. Laboratory studies with marine fishes focused on the sublethal effects of oil and dispersants, and early life history stages were generally found to be more sensitive to these toxins than adults. Field studies in the vicinity of the DWH spill indicate a significant reduction in abundance and diversity of benthic meiofauna and macrofauna as well as visual damage to deep-sea corals. Overall, studies indicate that while the responses of various marine species to oil and dispersants are quite variable, a general picture is emerging that chemical dispersants may be more toxic to some marine organisms than previously thought, and that small oil droplets created by dispersant use and directly consumed by marine organisms are often more toxic than crude oil alone.}
 }
 
+@article{Campana2018,
+  title = {Succession of {{Antarctic}} Benthic Algae ({{Potter Cove}}, {{South Shetland Islands}}): Structural Patterns and Glacial Impact over a Four-Year Period},
+  shorttitle = {Succession of {{Antarctic}} Benthic Algae ({{Potter Cove}}, {{South Shetland Islands}})},
+  author = {Campana, Gabriela L. and Zacher, Katharina and Deregibus, Dolores and Momo, Fernando Roberto and Wiencke, Christian and Quartino, Mar{\'i}a Liliana},
+  year = {2018},
+  month = feb,
+  journal = {Polar Biology},
+  volume = {41},
+  number = {2},
+  pages = {377--396},
+  issn = {1432-2056},
+  doi = {10.1007/s00300-017-2197-x},
+  urldate = {2023-09-21},
+  abstract = {There is a general lack of information on the succession of marine benthic algae in Antarctica. We performed two colonization experiments in the upper subtidal (3 and 5~m depth) using artificial substrates in Potter Cove (South Shetland Islands): in the outer cove, an area mainly unaffected by sedimentation, and in the inner cove, in close proximity to a retreating glacier, with high sediment inflow particularly during the melting season. Seasonal and interannual changes in total, diatom and macroalgal cover, species composition, and ecological indexes were assessed over four years. Tiles were analysed in spring and summer in the laboratory and by year-round photographic monitoring. Irradiance (photosynthetically active radiation and ultraviolet radiation), salinity, and temperature were monitored on a monthly basis. Benthic algae dominated the assemblages, with macroalgae reaching \textasciitilde 70\% cover after two years. There were site and temporal differences in the contribution of diatom mats (mainly pennate forms) and macroalgal cover. Diatom cover was higher at the glacier-influenced site, particularly at the early stages, and decreased significantly with time. Between years, macroalgal assemblages changed significantly in a site-specific manner. Assemblages mainly comprised annual and pseudoperennial species at both sites, with absence of adult large Desmarestiales. Although a year separated the establishment of the two experiments, there were convergence patterns in the changes of cover over time\textemdash that seemed to be controlled by competitive interactions\textemdash and in the patterns of species replacement. However, the inner cove site exhibited lower number of macroalgal taxa and a tendency to decreased diversity over time that could be related to higher level of stress and disturbance caused by glacial influence.},
+  langid = {english},
+  keywords = {Benthic communities,Colonization,Glacier retreat,Global climate warming,Macroalgae and microalgae,UV radiation},
+  file = {/Users/tomasmarina/Zotero/storage/HZWBHEA2/Campana et al. - 2018 - Succession of Antarctic benthic algae (Potter Cove.pdf}
+}
+
 @article{Carbajal2018,
   title = {High-{{Frequency Frontal Displacements South}} of {{San Jorge Gulf During}} a {{Tidal Cycle Near Spring}} and {{Neap Phases}}: {{BIOLOGICAL IMPLICATIONS BETWEEN TIDAL STATES}}},
   shorttitle = {High-{{Frequency Frontal Displacements South}} of {{San Jorge Gulf During}} a {{Tidal Cycle Near Spring}} and {{Neap Phases}}},
@@ -610,6 +645,24 @@
   langid = {english},
   keywords = {Eltonian niche,Network structure},
   file = {/Users/tomasmarina/Zotero/storage/HRSG624T/Cirtwill et al. - 2018 - A review of species role concepts in food webs.pdf;/Users/tomasmarina/Zotero/storage/XBLCMXLA/S2352249617300381.html}
+}
+
+@article{Clark2013,
+  title = {Light-Driven Tipping Points in Polar Ecosystems},
+  author = {Clark, Graeme F. and Stark, Jonathan S. and Johnston, Emma L. and Runcie, John W. and Goldsworthy, Paul M. and Raymond, Ben and Riddle, Martin J.},
+  year = {2013},
+  journal = {Global Change Biology},
+  volume = {19},
+  number = {12},
+  pages = {3749--3761},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.12337},
+  urldate = {2023-09-21},
+  abstract = {Some ecosystems can undergo abrupt transformation in response to relatively small environmental change. Identifying imminent `tipping points' is crucial for biodiversity conservation, particularly in the face of climate change. Here, we describe a tipping point mechanism likely to induce widespread regime shifts in polar ecosystems. Seasonal snow and ice-cover periodically block sunlight reaching polar ecosystems, but the effect of this on annual light depends critically on the timing of cover within the annual solar cycle. At high latitudes, sunlight is strongly seasonal, and ice-free days around the summer solstice receive orders of magnitude more light than those in winter. Early melt that brings the date of ice-loss closer to midsummer will cause an exponential increase in the amount of sunlight reaching some ecosystems per year. This is likely to drive ecological tipping points in which primary producers (plants and algae) flourish and out-compete dark-adapted communities. We demonstrate this principle on Antarctic shallow seabed ecosystems, which our data suggest are sensitive to small changes in the timing of sea-ice loss. Algae respond to light thresholds that are easily exceeded by a slight reduction in sea-ice duration. Earlier sea-ice loss is likely to cause extensive regime shifts in which endemic shallow-water invertebrate communities are replaced by algae, reducing coastal biodiversity and fundamentally changing ecosystem functioning. Modeling shows that recent changes in ice and snow cover have already transformed annual light budgets in large areas of the Arctic and Antarctic, and both aquatic and terrestrial ecosystems are likely to experience further significant change in light. The interaction between ice-loss and solar irradiance renders polar ecosystems acutely vulnerable to abrupt ecosystem change, as light-driven tipping points are readily breached by relatively slight shifts in the timing of snow and ice-loss.},
+  copyright = {\textcopyright{} 2013 John Wiley \& Sons Ltd},
+  langid = {english},
+  keywords = {benthic,biodiversity,irradiance,macroalgae,marine ecology,polar,regime shift},
+  file = {/Users/tomasmarina/Zotero/storage/RIXL7STI/Clark et al. - 2013 - Light-driven tipping points in polar ecosystems.pdf}
 }
 
 @article{Clucas2014,
@@ -916,6 +969,22 @@
   keywords = {Glacier runoff,Light requirements,Metabolic carbon balance,Photosynthesis,Photosynthetic acclimation,Turbidity}
 }
 
+@article{Deregibus2023,
+  title = {Potential Macroalgal Expansion and Blue Carbon Gains with Northern {{Antarctic Peninsula}} Glacial Retreat},
+  author = {Deregibus, Dolores and Campana, Gabriela L. and Neder, Camila and Barnes, David K. A. and Zacher, Katharina and Piscicelli, Juan Manuel and Jerosch, Kerstin and Quartino, Mar{\'i}a Liliana},
+  year = {2023},
+  month = jul,
+  journal = {Marine Environmental Research},
+  volume = {189},
+  pages = {106056},
+  issn = {0141-1136},
+  doi = {10.1016/j.marenvres.2023.106056},
+  urldate = {2023-09-21},
+  abstract = {The West Antarctic Peninsula (WAP) is a hotspot of physical climate change, especially glacial retreat, particularly in its northern South Shetland Islands (SSI) region. Along coastlines, this process is opening up new ice-free areas, for colonization by a high biodiversity of flora and fauna. At Potter Cove, in the SSI (Isla 25 de Mayo/King George Island), Antarctica, colonization by macroalgae was studied in two newly ice-free areas, a low glacier influence area (LGI), and a high glacier influence area (HGI) differing in the presence of sediment run-off and light penetration, which are driven by levels of glacial influence. We installed artificial substrates (tiles) at 5~m depth to analyze benthic algal colonization and succession for four years (2010\textendash 2014). Photosynthetic active radiation (PAR, 400\textendash 700~nm), temperature, salinity, and turbidity were monitored at both sites in spring and summer. The turbidity and the light attenuation (Kd) were significantly lower at LGI than at HGI. All tiles were colonized by benthic algae, differing in species identity and successional patterns between areas, and with a significantly higher richness at LGI than HGI in the last year of the experiment. We scaled up a quadrat survey on the natural substrate to estimate benthic algal colonization in newly deglaciated areas across Potter Cove. Warming in recent decades has exposed much new habitat, with macroalgae making up an important part of colonist communities `chasing' such glacier retreat. Our estimation of algal colonization in newly ice-free areas shows an expansion of {$\sim$}0.005\textendash 0.012~km2 with a carbon standing stock of {$\sim$}0.2\textendash 0.4~C tons, per year. Life moving into new space in such emerging fjords has the potential to be key for new carbon sinks and export. In sustained climate change scenarios, we expect that the processes of colonization and expansion of benthic assemblages will continue and generate significant transformations in Antarctic coastal ecosystems by increasing primary production, providing new structures, food and refuge to fauna, and capturing and storing more carbon.},
+  keywords = {Benthos,Biomass,Climate change,Colonization,Glacier retreat},
+  file = {/Users/tomasmarina/Zotero/storage/6WYHI5BH/S0141113623001848.html}
+}
+
 @article{Diez2012,
   title = {Pelagic Swarms and Beach Strandings of the Squat Lobster {{Munida}} Gregaria ({{Anomura}}: {{Munididae}}) in the {{Beagle Channel}}, {{Tierra}} Del {{Fuego}}},
   shorttitle = {Pelagic Swarms and Beach Strandings of the Squat Lobster {{Munida}} Gregaria ({{Anomura}}},
@@ -966,6 +1035,24 @@
   copyright = {\textcopyright{} 2023. The Authors.},
   langid = {english},
   file = {/Users/tomasmarina/Zotero/storage/X6K56YH8/Dinniman et al. - 2023 - Sensitivity of the Relationship Between Antarctic .pdf}
+}
+
+@article{Duffy2007,
+  title = {The Functional Role of Biodiversity in Ecosystems: Incorporating Trophic Complexity},
+  shorttitle = {The Functional Role of Biodiversity in Ecosystems},
+  author = {Duffy, J. Emmett and Cardinale, Bradley J. and France, Kristin E. and McIntyre, Peter B. and Th{\'e}bault, Elisa and Loreau, Michel},
+  year = {2007},
+  journal = {Ecology Letters},
+  volume = {10},
+  number = {6},
+  pages = {522--538},
+  issn = {1461-0248},
+  doi = {10.1111/j.1461-0248.2007.01037.x},
+  urldate = {2023-09-21},
+  abstract = {Understanding how biodiversity affects functioning of ecosystems requires integrating diversity within trophic levels (horizontal diversity) and across trophic levels (vertical diversity, including food chain length and omnivory). We review theoretical and experimental progress toward this goal. Generally, experiments show that biomass and resource use increase similarly with horizontal diversity of either producers or consumers. Among prey, higher diversity often increases resistance to predation, due to increased probability of including inedible species and reduced efficiency of specialist predators confronted with diverse prey. Among predators, changing diversity can cascade to affect plant biomass, but the strength and sign of this effect depend on the degree of omnivory and prey behaviour. Horizontal and vertical diversity also interact: adding a trophic level can qualitatively change diversity effects at adjacent levels. Multitrophic interactions produce a richer variety of diversity-functioning relationships than the monotonic changes predicted for single trophic levels. This complexity depends on the degree of consumer dietary generalism, trade-offs between competitive ability and resistance to predation, intraguild predation and openness to migration. Although complementarity and selection effects occur in both animals and plants, few studies have conclusively documented the mechanisms mediating diversity effects. Understanding how biodiversity affects functioning of complex ecosystems will benefit from integrating theory and experiments with simulations and network-based approaches.},
+  langid = {english},
+  keywords = {Ecosystem functioning,grazing,horizontal diversity,niche breadth,top-down control,trophic cascade,vertical diversity},
+  file = {/Users/tomasmarina/Zotero/storage/7K72LA4Q/Duffy et al. - 2007 - The functional role of biodiversity in ecosystems.pdf;/Users/tomasmarina/Zotero/storage/M6FMIP6C/j.1461-0248.2007.01037.html}
 }
 
 @article{Dulvy2014,
@@ -1072,6 +1159,22 @@
   file = {/Users/tomasmarina/Zotero/storage/3JUAMCAI/Fernández et al. - 2010 - Chinook salmon (Oncorhynchus tshawytscha, Walbaum .pdf}
 }
 
+@article{Ferreira2021,
+  title = {Endocrine Disruption in the Sub {{Antarctic}} Fish {{Patagonotothen}} Tessellata ({{Perciformes}}, {{Notothenidae}}) from {{Beagle Channel}} Associated to Anthropogenic Impact},
+  author = {Ferreira, Maria Florencia and Lo Nostro, Fabiana L. and Fern{\'a}ndez, Daniel A. and Genovese, Griselda},
+  year = {2021},
+  month = oct,
+  journal = {Marine Environmental Research},
+  volume = {171},
+  pages = {105478},
+  issn = {0141-1136},
+  doi = {10.1016/j.marenvres.2021.105478},
+  urldate = {2023-09-21},
+  abstract = {Situated in the sub-Antarctic region, Beagle Channel represents a unique marine ecosystem due to the connection between the Pacific and the Atlantic Oceans, and its proximity to the Antarctic Peninsula. Ushuaia city, the biggest settlement on the channel, exerts an increasing anthropogenic pressure by discharges of urban and industrial effluents. In the present work, we use Patagonotothen tessellata, one of the most abundant and widespread species in the channel, as a bioindicator species in order to evidence anthropic impact from Ushuaia Bay and surrounding areas. We first analyzed and characterized real time gene expression of androgen receptor, estrogen receptor and different forms of vitellogenin (VTG), under laboratory conditions. This was achieved by induction with estradiol of P. tessellata males. Then, the selected genes were used as biomarkers for an environmental biomonitoring study. Morphometric indices and circulating sex steroids (estradiol and testosterone) were also quantified in male fish collected from different sites. The qPCR analysis showed that vtgAb form is more inducible than vtgAa or vtgC forms after estrogen induction. The field survey revealed the up-regulation of vtgAb and the androgen receptor in fish from sites with higher anthropogenic influence. Sex steroids followed seasonal variations according to their reproductive cycle, with higher levels of estradiol and testosterone in winter and summer seasons. The use of biomarkers such as gene expression of VTG demonstrates that fish from Ushuaia Bay are likely to be exposed to endocrine disrupting compounds. To our knowledge, this research is the first attempt to assess the endocrine disruption associated to anthropic impact in a widespread fish of the Beagle Channel and contributes to a better understanding of the reproductive physiology of sub Antarctic ichthyofauna.},
+  keywords = {Anthropogenic activity,Endocrine disruption,Notothenioid fish,Sex steroids,Sub Antarctica,Vitellogenin gene expression},
+  file = {/Users/tomasmarina/Zotero/storage/72NRZRKZ/S0141113621002348.html}
+}
+
 @article{Fioramonti2022,
   title = {Mercury Transfer in Coastal and Oceanic Food Webs from the {{Southwest Atlantic Ocean}}},
   author = {Fioramonti, N. E. and Ribeiro Guevara, S. and Becker, Y. A. and Riccialdelli, L.},
@@ -1159,6 +1262,27 @@
   address = {{Germany}},
   institution = {{Alfred-Wegener-Institut f\"ur Polar- und Meeresforschung}},
   file = {/Users/tomasmarina/Zotero/storage/8N8WENAC/MASSIVE_INPUT_OF_TERRIGENOUS_SEDIMENT_IN20170218-24736-9mjvhm-libre.pdf}
+}
+
+@article{Fuentes2016,
+  title = {Glacial Melting: An Overlooked Threat to {{Antarctic}} Krill},
+  shorttitle = {Glacial Melting},
+  author = {Fuentes, Ver{\'o}nica and Alurralde, Gast{\'o}n and Meyer, Bettina and Aguirre, Gast{\'o}n E. and Canepa, Antonio and W{\"o}lfl, Anne-Cathrin and Hass, H. Christian and Williams, Gabriela N. and Schloss, Irene R.},
+  year = {2016},
+  month = jun,
+  journal = {Scientific Reports},
+  volume = {6},
+  number = {1},
+  pages = {27234},
+  publisher = {{Nature Publishing Group}},
+  issn = {2045-2322},
+  doi = {10.1038/srep27234},
+  urldate = {2023-09-21},
+  abstract = {Strandings of marine animals are relatively common in marine systems. However, the underlying mechanisms are poorly understood. We observed mass strandings of krill in Antarctica that appeared to be linked to the presence of glacial meltwater. Climate-induced glacial meltwater leads to an increased occurrence of suspended particles in the sea, which is known to affect the physiology of aquatic organisms. Here, we study the effect of suspended inorganic particles on krill in relation to krill mortality events observed in Potter Cove, Antarctica, between 2003 and 2012. The experimental results showed that large quantities of lithogenic particles affected krill feeding, absorption capacity and performance after only 24\,h of exposure. Negative effects were related to both the threshold concentrations and the size of the suspended particles. Analysis of the stomach contents of stranded krill showed large quantities of large particles (\,{$>$}\,106{$\mu$}m3), which were most likely mobilized by glacial meltwater. Ongoing climate-induced glacial melting may impact the coastal ecosystems of Antarctica that rely on krill.},
+  copyright = {2016 The Author(s)},
+  langid = {english},
+  keywords = {Biooceanography,Ocean sciences},
+  file = {/Users/tomasmarina/Zotero/storage/T8QFCQ6V/Fuentes et al. - 2016 - Glacial melting an overlooked threat to Antarctic.pdf}
 }
 
 @article{Funes2022,
@@ -1296,6 +1420,23 @@
   urldate = {2023-07-26},
   abstract = {Ecologists have long sought to understand how diversity and structure mediate the stability of whole ecosystems. For high-diversity food webs, the interactions between species are typically represented using matrices with randomly chosen interaction strengths. Unfortunately, this procedure tends to produce ecological systems with no underlying equilibrium solution, and so ecological inferences from this approach may be biased by nonbiological outcomes. Using recent computationally efficient methodological advances from metabolic networks, we employ for the first time an inverse approach to diversity\textendash stability research. We compare classical random interaction matrices of realistic food web topology (hereafter the classical model) to feasible, biologically constrained, webs produced using the inverse approach. We show that an energetically constrained feasible model yields a far higher proportion of stable high-diversity webs than the classical random matrix approach. When we examine the energetically constrained interaction strength distributions of these matrix models, we find that although these diverse webs have consistent negative self-regulation, they do not require strong self-regulation to persist. These energetically constrained diverse webs instead show an increasing preponderance of weak interactions that are known to increase local stability. Further examination shows that some of these weak interactions naturally appear to arise in the model food webs from a constraint-generated realistic generalist\textendash specialist trade-off, whereby generalist predators have weaker interactions than more specialized species. Additionally, the inverse technique we present here has enormous promise for understanding the role of the biological structure behind stable high-diversity webs and for linking empirical data to the theory.},
   file = {/Users/tomasmarina/Zotero/storage/7L3CUFMS/Gellner et al. - 2023 - Stable diverse food webs become more common when i.pdf}
+}
+
+@article{Giarratano2010,
+  title = {Heavy Metals Monitoring in the Southernmost Mussel Farm of the World ({{Beagle Channel}}, {{Argentina}})},
+  author = {Giarratano, Erica and Amin, Oscar A.},
+  year = {2010},
+  month = sep,
+  journal = {Ecotoxicology and Environmental Safety},
+  volume = {73},
+  number = {6},
+  pages = {1378--1384},
+  issn = {0147-6513},
+  doi = {10.1016/j.ecoenv.2010.06.023},
+  urldate = {2023-09-21},
+  abstract = {Water quality surrounding the mussel farm of Mytilus edulis chilensis at Brown Bay (Beagle Channel) was evaluated. The levels of five heavy metals in sediment and in gill and digestive gland of mussels were examined to consider potential risks to human health. Cd showed the highest enrichment factor in relation to its level in Earth crust (3.85\textendash 21.58), which could be related to an upwelling phenomenon. A seasonal trend was found regarding metal bioaccumulation, being higher in winter than in summer. The bioaccumulation pattern in gill was Zn{$>$}Fe{$>$}Cu{$>$}Cd, meanwhile in digestive gland was Fe{$>$}Zn{$>$}Cu{$>$}Cd. Despite Pb was measured in sediment (15.59\textendash 23.91{$\mu$}g/gdw), it was not available for being incorporated by mussels. In all cases it was below the detection limit (2.37{$\mu$}g/gdw). With regard to human consumption of mussels from Brown Bay, none of the elements analyzed should cause concern for consumers. Values measured in tissue mussels were below the limit of 10{$\mu$}g/gdw for Cd and Pb established by SENASA for molluscs. Considering that studied mussels are for human consumption and the relatively high levels of metals in sediment may vary their availability if physical parameters changes, periodical monitoring must be carried out to avoid human risks and to produce food in a responsible manner that complies with the food safety standards.},
+  keywords = {Beagle Channel,Heavy metals,Monitoring,Mussel farm},
+  file = {/Users/tomasmarina/Zotero/storage/6XSSMK2H/S0147651310001466.html}
 }
 
 @article{Gille2002,
@@ -1827,7 +1968,25 @@
   file = {/Users/tomasmarina/Zotero/storage/8KI4AAUU/Jordán et al. - 2006 - Topological keystone species measures of position.pdf}
 }
 
-@article{Kaminskyinprep.,
+@article{Jordan2007,
+  title = {Quantifying Positional Importance in Food Webs: {{A}} Comparison of Centrality Indices},
+  shorttitle = {Quantifying Positional Importance in Food Webs},
+  author = {Jord{\'a}n, Ferenc and Benedek, Zs{\'o}fia and Podani, J{\'a}nos},
+  year = {2007},
+  month = jul,
+  journal = {Ecological Modelling},
+  volume = {205},
+  number = {1},
+  pages = {270--275},
+  issn = {0304-3800},
+  doi = {10.1016/j.ecolmodel.2007.02.032},
+  urldate = {2023-09-21},
+  abstract = {Conservation biology should focus more on the importance rather than the rarity of species, although the definition and quantification of importance are not easy. One approach involves measuring the positional importance (e.g. centrality) of species in ecological interaction networks to provide a basis for species ranking. However, there are many centrality indices, each reflecting a particular aspect of positional importance and therefore giving a rank order of species different from those provided by alternative formulations. Thus, there is a strong need for comparing the available indices and for examining their relative merits in network analysis. In this paper, we apply 13 centrality indices to the ``species'' (trophic components) of methodologically comparable trophic flow networks, in order to answer the following questions: (1) What is the disagreement between different indices regarding the rank of a given species in a given network? (2) How is this disagreement in performance influenced by the choice of the network? (3) What is the overall relationship among these indices and, in particular, which are the most similar to degree (the simplest index of all, being equal to the number of links pertaining to a given node)? We compare the 13 indices based on the data of nine networks using metric and rank statistics and multivariate analysis procedures. We conclude that (1) different centrality ranks differ in each network; (2) different webs can be characterized by different relationships between ranks but there is a robust pattern of relationships among the indices, some index pairs behaving very similarly in all networks; and (3) it is the index of closeness centrality which provides a rank most similar to that based on degree.},
+  keywords = {Centrality,Clustering,Food web,Indirect effect,Keystone species,Network analysis,Ordination,Ranking},
+  file = {/Users/tomasmarina/Zotero/storage/RLMGG3AY/S0304380007001184.html}
+}
+
+@article{Kaminskyinprep,
   title = {Coming Soon...},
   author = {Kaminsky, J. and {et al.}},
   year = {in prep.}
