--- a/JAE_Review.bib
+++ b/JAE_Review.bib
@@ -2581,6 +2581,26 @@
   file = {/Users/tomasmarina/Zotero/storage/BVHZSLNP/Meyer et al. - 2017 - The winter pack-ice zone provides a sheltered but .pdf}
 }
 
+@article{Michel2019,
+  title = {Increased Sea Ice Cover Alters Food Web Structure in {{East Antarctica}}},
+  author = {Michel, Lo{\"i}c N. and Danis, Bruno and Dubois, Philippe and Eleaume, Marc and Fournier, J{\'e}r{\^o}me and Gallut, Cyril and Jane, Philip and Lepoint, Gilles},
+  year = {2019},
+  month = may,
+  journal = {Scientific Reports},
+  volume = {9},
+  number = {1},
+  pages = {8062},
+  publisher = {{Nature Publishing Group}},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-019-44605-5},
+  urldate = {2023-09-23},
+  abstract = {In recent years, sea ice cover along coasts of East Antarctica has tended to increase. To understand ecological implications of these environmental changes, we studied benthic food web structure on the coasts of Ad\'elie Land during an event of unusually high sea ice cover (i.e. two successive austral summers without seasonal breakup). We used integrative trophic markers (stable isotope ratios of carbon, nitrogen and sulfur) to build ecological models and explored feeding habits of macroinvertebrates. In total, 28 taxa spanning most present animal groups and functional guilds were investigated. Our results indicate that the absence of seasonal sea ice breakup deeply influenced benthic food webs. Sympagic algae dominated the diet of many key consumers, and the trophic levels of invertebrates were low, suggesting omnivore consumers did not rely much on predation and/or scavenging. Our results provide insights about how Antarctic benthic consumers, which typically live in an extremely stable environment, might adapt their feeding habits in response to sudden changes in environmental conditions and trophic resource availability. They also show that local and/or global trends of sea ice increase in Antarctica have the potential to cause drastic changes in food web structure, and therefore to impact benthic communities.},
+  copyright = {2019 The Author(s)},
+  langid = {english},
+  keywords = {Climate-change ecology,Ecological networks,Ecosystem ecology,Stable isotope analysis},
+  file = {/Users/tomasmarina/Zotero/storage/8FWJIZ8P/Michel et al. - 2019 - Increased sea ice cover alters food web structure .pdf}
+}
+
 @incollection{Mintenbeck2012,
   title = {Impact of {{Climate Change}} on {{Fishes}} in {{Complex Antarctic Ecosystems}}},
   booktitle = {Advances in {{Ecological Research}}},
@@ -2981,6 +3001,13 @@
   langid = {english},
   keywords = {Antarctica,climate change,conservation,humpback whale,krill,pregnancy rates},
   file = {/Users/tomasmarina/Zotero/storage/EX67KYJF/Pallin et al. - 2023 - A surplus no more Variation in krill availability.pdf}
+}
+
+@misc{Pante2023,
+  title = {Marmap: {{Import}}, {{Plot}} and {{Analyze Bathymetric}} and   {{Topographic Data}}},
+  author = {Pante, E. and {Simon-Bouhet}, B. and Irisson, J.},
+  year = {2023},
+  file = {/Users/tomasmarina/Zotero/storage/5DDSFNR3/marmap.pdf}
 }
 
 @article{Paparazzo2021,
@@ -3473,6 +3500,26 @@
   langid = {english},
   keywords = {Anthropogenic activities,Climate change,Food web,Marine ecosystems,Sub-Antarctic,West Antarctic Peninsula},
   file = {/Users/tomasmarina/Zotero/storage/7NCCT4VN/Rodriguez et al. - 2022 - Marine food webs are more complex but less stable .pdf}
+}
+
+@article{Rossi2019,
+  title = {Antarctic Food Web Architecture under Varying Dynamics of Sea Ice Cover},
+  author = {Rossi, Loreto and Sporta Caputi, Simona and Calizza, Edoardo and Careddu, Giulio and Oliverio, Marco and Schiaparelli, Stefano and Costantini, Maria Letizia},
+  year = {2019},
+  month = aug,
+  journal = {Scientific Reports},
+  volume = {9},
+  number = {1},
+  pages = {12454},
+  publisher = {{Nature Publishing Group}},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-019-48245-7},
+  urldate = {2023-09-23},
+  abstract = {In the Ross Sea, biodiversity organisation is strongly influenced by sea-ice cover, which is characterised by marked spatio-temporal variations. Expected changes in seasonal sea-ice dynamics will be reflected in food web architecture, providing a unique opportunity to study effects of climate change. Based on individual stable isotope analyses and the high taxonomic resolution of sampled specimens, we described benthic food webs in contrasting conditions of seasonal sea-ice persistence (early vs. late sea-ice break up) in medium-depth waters in Terra Nova Bay (Ross Sea). The architecture of biodiversity was reshaped by the pulsed input of sympagic food sources following sea-ice break up, with food web simplification, decreased intraguild predation, potential disturbance propagation and increased vulnerability to biodiversity loss. Following our approach, it was possible to describe in unprecedented detail the complex structure of biodiverse communities, emphasising the role of sympagic inputs, regulated by sea-ice dynamics, in structuring Antarctic medium-depth benthic food webs.},
+  copyright = {2019 The Author(s)},
+  langid = {english},
+  keywords = {Climate-change ecology,Ecological networks,Food webs},
+  file = {/Users/tomasmarina/Zotero/storage/E74GCJTM/Rossi et al. - 2019 - Antarctic food web architecture under varying dyna.pdf}
 }
 
 @article{Rowlands2021,
