--- a/JAE_Review.bib
+++ b/JAE_Review.bib
@@ -74,7 +74,8 @@
   address = {{Mar del Plata}},
   urldate = {2023-09-26},
   abstract = {El presente documento tiene como objeto describir los principales ecosistemas marinos de la regi\'on (ecosistema costero bonaerense, plataforma media, norpatag\'onico, austral y talud) y aportar informaci\'on biol\'ogica y pesquera de los recursos de importancia comercial m\'as relevantes, as\'i como de los restantes componentes biol\'ogicos que habitan esos ecosistemas (fito y zooplancton, invertebrados bent\'onicos). Se espera que esta informaci\'on contribuya, en una primera instancia, a la planificaci\'on de futuras prospecciones s\'ismicas, de forma tal de minimizar el eventual impacto que ellas pudiesen causar sobre la biota de estos ecosistemas. Tambi\'en se brinda informaci\'on sobre la distribuci\'on de la flota pesquera y la normativa vigente de manejo para las diferentes pesquer\'ias que se desarrollan en la ZEEA.},
-  langid = {spanish}
+  langid = {spanish},
+  file = {/Users/tomasmarina/Zotero/storage/BTU98YVW/Allega et al. - 2020 - Estado del conocimiento biológico pesquero de los .pdf}
 }
 
 @article{Alonso2019,
@@ -1428,6 +1429,24 @@
   file = {/Users/tomasmarina/Zotero/storage/T8QFCQ6V/Fuentes et al. - 2016 - Glacial melting an overlooked threat to Antarctic.pdf}
 }
 
+@article{Funes2019,
+  title = {Does Trawl Fisheries Affect the Diet of Fishes? {{A}} Stable Isotope Analysis Approach*},
+  shorttitle = {Does Trawl Fisheries Affect the Diet of Fishes?},
+  author = {Funes, Manuela and Marinao, Cristian and Galv{\'a}n, David E.},
+  year = {2019},
+  month = jul,
+  journal = {Isotopes in Environmental and Health Studies},
+  volume = {55},
+  number = {4},
+  pages = {327--343},
+  publisher = {{Taylor \& Francis}},
+  issn = {1025-6016},
+  doi = {10.1080/10256016.2019.1626381},
+  urldate = {2023-09-28},
+  abstract = {Trawling is the main fishing practice worldwide and its ecosystem effects have been raising concern over the past decades. Long-term impacts can be monitored through changes in the trophic structure, and several studies evaluated trophic level (TL) shifts in fish populations between trawled and untrawled environments. However, published results are contrasting. We performed a metanalysis integrating all available studies that evaluated TL shifts in fishes between trawled and untrawled environments and conducted a local study comparing several features of the trophic ecology in two species of fishes. According to the metanalysis, TL does not change significantly with trawling. In contrast, the local study showed higher TLs and broader isotopic niches in the trawled environment. Diet reconstruction indicated a potential consumption of hake, the main discard component, at the trawled environment. All the studies used in the metanalysis were conducted in the Northern Hemisphere, whereas the local study represents the first data available from the Southern Hemisphere. As industrial commercial fisheries in Argentina are relatively recent, it is possible that our data are capturing the initial stage of ecological changes induced by trawling, compared with the historical fisheries located at the Northern Hemisphere.},
+  keywords = {Bycatch consumption,carbon-13,fisheries impact,isotope ecology,metanalysis,nitrogen-15,Patagonia,reef fish,trophic position}
+}
+
 @phdthesis{Funes2020,
   title = {Efectos de La Pesca de Arrastre Sobre La Estructura Tr\'ofica Del Norte Del {{Golfo San Jorge}}},
   author = {Funes, Manuela},
@@ -2234,8 +2253,8 @@
 }
 
 @article{Kaminskyinprep,
-  title = {Coming Soon...},
-  author = {Kaminsky, J. and {et al.}},
+  title = {Kelp Recruitment Declines in a Sub-{{Antarctic}} Ecosystem with High Sediment Inputs and Changes in the Understory Algae},
+  author = {Kaminsky, J. and Bagur, M. and Boraso, A. and Schloss, I. R. and Buschmann, A. H. and Quartino, M. L.},
   year = {in prep.}
 }
 
@@ -2562,6 +2581,24 @@
   langid = {english},
   keywords = {Humanities and Social Sciences,multidisciplinary,Science},
   file = {/Users/tomasmarina/Zotero/storage/VMCYYR9H/Loeb et al. - 1997 - Effects of sea-ice extent and krill or salp domina.pdf}
+}
+
+@incollection{Lopez-Gappa2022,
+  title = {The {{Impact}} of {{Global Change}} on {{Marine Benthic Invertebrates}}},
+  booktitle = {Global {{Change}} in {{Atlantic Coastal Patagonian Ecosystems}}: {{A Journey Through Time}}},
+  author = {{L{\'o}pez-Gappa}, Juan},
+  editor = {Helbling, E. Walter and Narvarte, Maite A. and Gonz{\'a}lez, Raul A. and Villafa{\~n}e, Virginia E.},
+  year = {2022},
+  series = {Natural and {{Social Sciences}} of {{Patagonia}}},
+  pages = {177--204},
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  doi = {10.1007/978-3-030-86676-1_8},
+  urldate = {2023-09-28},
+  abstract = {Marine biogeographers divide the coastal areas of the southern Southwest Atlantic in two main biogeographic units: the warm-temperate Argentine and the cold-temperate Magellanic provinces, with a transition at 43\textdegree\textendash 44\textdegree S. Biodiversity decreases with latitude in decapod crustaceans but increases southward in most benthic invertebrate groups. Patagonian rocky shores are exposed to harsh physical conditions resulting in intense desiccation of intertidal organisms, which can be expected to get worse in future scenarios of global climate change. A change to be anticipated in the Patagonian coast is the southward range shift of warm-temperate species, which can already be perceived in San Jorge gulf, where recent southward range extensions were detected in the distribution of several species. The most important changes during the last decades in the Patagonian coast were caused by the invasion of nonindigenous benthic invertebrates. The arrivals of the intertidal barnacle Balanus glandula, the crab Carcinus maenas, the sea slug Pleurobranchaea maculata, the tunicate Styela clava, and the reef-forming oyster Magallana gigas were the main invasions of marine invertebrates recorded in the region. Massive mortalities of the yellow clam Amarilladesma mactroides occurred in Buenos Aires Province and northern Patagonia in the 1990s. Future perspectives for the region are briefly discussed.},
+  isbn = {978-3-030-86676-1},
+  langid = {english},
+  keywords = {Biodiversity,Biogeography,Eutrophication,Invasive species}
 }
 
 @article{Lopez-Lopez2022,
@@ -4599,6 +4636,22 @@
   langid = {english},
   keywords = {Anthropocene,climate change,ecosystem function,herbivory,kelp,shifting species interactions,tropicalisation},
   file = {/Users/tomasmarina/Zotero/storage/YBC9MY3P/Vergés et al. - 2019 - Tropicalisation of temperate reefs Implications f.pdf;/Users/tomasmarina/Zotero/storage/WRPVW9UG/1365-2435.html}
+}
+
+@article{Vinuesa2005,
+  title = {Distribuci\'on de Crust\'aceos Dec\'apodos y Estomat\'opodos Del Golfo {{San Jorge}}, {{Argentina}}},
+  author = {Vinuesa, Julio H.},
+  year = {2005},
+  month = jul,
+  journal = {Revista de biolog\'ia marina y oceanograf\'ia},
+  volume = {40},
+  number = {1},
+  pages = {7--21},
+  publisher = {{Universidad de Valpara\'iso. Facultad de Ciencias del Mar}},
+  issn = {0718-1957},
+  doi = {10.4067/S0718-19572005000100002},
+  urldate = {2023-09-28},
+  file = {/Users/tomasmarina/Zotero/storage/2D44Z5QM/Vinuesa - 2005 - Distribución de crustáceos decápodos y estomatópod.pdf;/Users/tomasmarina/Zotero/storage/5P6JIRVG/scielo.html}
 }
 
 @article{Vinuesa2007,
